Add orchestrator-workers, parallelization, and routing architectures with LLM integration for document summarization and analysis

--- a/routing.ipynb
+++ b/routing.ipynb
@@ -50,13 +50,25 @@
    "outputs": [],
    "source": [
     "def dumb_node(state: State):\n",
-    "    pass\n",
+    "    response = dumb_llm.invoke(state[\"question\"])\n",
+    "    return {\n",
+    "        \"answer\": response.content,\n",
+    "        \"model_used\": \"gpt-3.5\",\n",
+    "    }\n",
     "\n",
     "def average_node(state: State):\n",
-    "    pass\n",
+    "    response = average_llm.invoke(state[\"question\"])\n",
+    "    return {\n",
+    "        \"answer\": response.content,\n",
+    "        \"model_used\": \"gpt-4o\",\n",
+    "    }\n",
     "\n",
     "def smart_node(state: State):\n",
-    "    pass\n",
+    "    response = smart_llm.invoke(state[\"question\"])\n",
+    "    return {\n",
+    "        \"answer\": response.content,\n",
+    "        \"model_used\": \"gpt-o3\",\n",
+    "    }\n",
     "\n",
     "def assess_difficulty(state: State):\n",
     "    structured_llm = llm.with_structured_output(DifficultyResponse)\n",
